# pofile-cli

./: .flake8  .gitignore  LICENSE  Makefile  README.md  setup.cfg
client/: pofile.py
tests/: test_api_urls.py  test_find.py  test_validation.py
