[metadata]
name = pofile-cli
version = 0.1.0
description = A CLI tool to translate PO files using https://pofile.io/.
long_description = file: README.md
long_description_content_type = text/markdown
author = Terrefta AB
author_email = kontakt@terrefta.se
url = https://github.com/terrefta/pofile-cli
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.0.0
    polib>=1.0.0

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    pofile = client.pofile:main